syntax = "proto3";

package file_pb;
option go_package = "github.com/LeeDigitalWorks/zapfs/proto/file_pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common.proto";

service FileService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc FileServerStatus(FileServerStatusRequest) returns (FileServerStatusResponse);
  rpc MarkBackendReadOnly(MarkBackendReadOnlyRequest) returns (google.protobuf.Empty);
  rpc MarkBackendWritable(MarkBackendWritableRequest) returns (google.protobuf.Empty);

  rpc PutObject(stream PutObjectRequest) returns (PutObjectResponse);
  rpc GetObject(GetObjectRequest) returns (stream GetObjectResponse);
  rpc GetObjectRange(GetObjectRangeRequest) returns (stream GetObjectResponse);
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse);
  rpc BatchDeleteObjects(BatchDeleteObjectsRequest) returns (BatchDeleteObjectsResponse);

  // Note: DecrementRefCount and DecrementRefCountBatch RPCs have been removed.
  // RefCount is now managed centrally in the metadata DB's chunk_registry table.

  // Chunk migration for cluster rebalancing
  // MigrateChunk transfers a chunk to a target server (called by manager or admin)
  rpc MigrateChunk(MigrateChunkRequest) returns (MigrateChunkResponse);

  // ReceiveChunk receives a chunk from a peer file server (peer-to-peer transfer)
  rpc ReceiveChunk(stream ReceiveChunkRequest) returns (ReceiveChunkResponse);

  // GetChunk retrieves raw chunk data by ID (used for migration)
  rpc GetChunk(GetChunkRequest) returns (stream GetChunkResponse);

  // Debug RPCs for testing and diagnostics
  rpc ListLocalChunks(ListLocalChunksRequest) returns (stream LocalChunkInfo);
  rpc GetLocalChunk(GetLocalChunkRequest) returns (LocalChunkInfo);
  rpc DeleteLocalChunk(DeleteLocalChunkRequest) returns (DeleteLocalChunkResponse);
}

message MemStatus {
  int32 goroutines = 1;
  uint64 all = 2;
  uint64 used = 3;
  uint64 free = 4;
  uint64 self = 5;
  uint64 heap = 6;
  uint64 stack = 7;
}

message FileServerStatusRequest {}
message FileServerStatusResponse {
  repeated common_pb.Backend backends = 1;
  MemStatus memory_status = 2;
  string version = 3;
  string data_center = 4;
  string rack = 5;
  string node = 6;
}

message PingRequest {}
message PingResponse {
  uint64 start_time = 1;
  uint64 current_time = 2;
  uint64 stop_time = 3;
}

message PutObjectRequest {
  oneof payload {
    PutObjectMeta meta = 1;
    bytes chunk = 2;
  }
}

message PutObjectMeta {
  string object_id = 1;
  string preferred_backend_id = 2;
  uint64 total_size = 3;

  bool async_replication = 5;
  bool use_erasure_coding = 6;
  common_pb.ECScheme ec_scheme = 7;
  string compression = 8;  // Compression algorithm: "none", "lz4", "zstd", "snappy"
}

message PutObjectResponse {
  string object_id = 1;
  uint64 size = 2;
  string etag = 3;
  google.protobuf.Timestamp modified_at = 4;
  repeated ChunkInfo chunks = 5;  // Actual chunk IDs (SHA-256 content hashes)
}

// ChunkInfo describes a chunk written by the file server
message ChunkInfo {
  string chunk_id = 1;      // SHA-256 content hash of ORIGINAL (uncompressed) data
  uint64 size = 2;          // Compressed size on disk
  uint64 offset = 3;        // Offset within the object
  uint64 original_size = 4; // Original uncompressed size
  string compression = 5;   // Compression algorithm used: "none", "lz4", "zstd", "snappy"
}

message GetObjectRequest {
  string object_id = 1;
}

message GetObjectRangeRequest {
  string object_id = 1;
  uint64 offset = 2;
  uint64 length = 3;
}

message GetObjectResponse {
  bytes chunk = 1;
  string etag = 2;
}

message DeleteObjectRequest {
  string object_id = 1;
}

message DeleteObjectResponse {
  string object_id = 1;
  int32 status = 2;
  string error = 3;
  uint32 size = 4;
  uint32 version = 5;
  google.protobuf.Timestamp deleted_at = 6;
}

message BatchDeleteObjectsRequest {
  repeated string object_ids = 1;
}

message BatchDeleteObjectsResponse {
  repeated DeleteObjectResponse results = 1;
}

message MarkBackendReadOnlyRequest {
  string backend_id = 1;
}

message MarkBackendWritableRequest {
  string backend_id = 1;
}

// Chunk migration messages

message MigrateChunkRequest {
  string chunk_id = 1;
  string target_server = 2;        // Target file server address (e.g., "file-2:8001")
  string target_backend_id = 3;    // Optional: specific backend on target
  bool delete_after_migrate = 4;   // Delete source chunk after successful migration
}

message MigrateChunkResponse {
  bool success = 1;
  string error = 2;
  int64 bytes_transferred = 3;
  int64 duration_ms = 4;
}

message ReceiveChunkRequest {
  oneof payload {
    ReceiveChunkMeta meta = 1;
    bytes data = 2;
  }
}

message ReceiveChunkMeta {
  string chunk_id = 1;
  string backend_id = 2;          // Target backend on this server
  uint64 size = 3;
  string checksum = 4;            // Expected checksum for verification
  string source_server = 5;       // For logging/debugging
}

message ReceiveChunkResponse {
  bool success = 1;
  string error = 2;
  string chunk_id = 3;
}

message GetChunkRequest {
  string chunk_id = 1;
  int64 offset = 2;   // Start offset for range reads (0 = beginning)
  int64 length = 3;   // Number of bytes to read (0 = entire chunk)
}

message GetChunkResponse {
  oneof payload {
    GetChunkMeta meta = 1;
    bytes data = 2;
  }
}

message GetChunkMeta {
  string chunk_id = 1;
  uint64 size = 2;
  string checksum = 3;
  string backend_id = 4;
}

// Debug messages for testing and diagnostics

message ListLocalChunksRequest {}

message LocalChunkInfo {
  string chunk_id = 1;
  int64 size = 2;           // Compressed size on disk
  int64 created_at = 3;
  string backend_id = 4;
  string path = 5;
  // Note: ref_count and zero_ref_since removed - RefCount managed in chunk_registry
  int64 original_size = 6;  // Original uncompressed size
  string compression = 7;   // Compression algorithm used
}

message GetLocalChunkRequest {
  string chunk_id = 1;
}

message DeleteLocalChunkRequest {
  string chunk_id = 1;
}

message DeleteLocalChunkResponse {
  bool success = 1;
  string error = 2;
}
